# AnyWhereVibe

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
android/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  daemon.rs  files.rs  git.rs  lib.rs  main.rs  server.rs  session.rs  test_support.rs  transport.rs  wire.rs
crates/agent/src/adapter/: codex_appserver.rs  codex_cli.rs  mock.rs  mod.rs
crates/agent/src/codex/: mod.rs  process.rs  rpc.rs
crates/agent/tests/: config_defaults.rs  files_session_sandbox.rs  git_readonly.rs  heartbeat.rs  mock_adapter.rs  remote_transport.rs  server_handshake.rs  server_sessions.rs  session_store.rs  transport_config.rs  wire_codec.rs
crates/connection-node/: Cargo.toml
crates/connection-node/src/: config.rs  db.rs  lib.rs  main.rs  registry.rs  relay.rs  router.rs  server.rs  user_cli.rs
crates/connection-node/tests/: config_defaults.rs  registry.rs  router.rs  server_ws.rs  user_cli.rs
crates/proto-gen/: Cargo.toml  build.rs
deploy/: Dockerfile.connection-node  connection-node.service
docs/: SPEC-AGENT.md  SPEC-ANDROID.md  SPEC-IOS.md  SPEC-NODE.md  SPEC-PROTO.md  SPEC-WATCHOS.md  SPEC.md  mobile-remote-terminal-v4.docx  self-hosted-guide.md
ios/: project.yml
ios/MRT/: ContentView.swift  Info.plist  (+1 more)
ios/MRT.xcodeproj/: project.pbxproj
proto/: mrt.proto
scripts/: dev-agent-mock.sh  e2e-android-ui.sh  e2e-ios-agent.sh  e2e-ios-ui.sh  proto-gen-kotlin.sh  proto-gen-swift.sh  test-ios.sh
(+201 files in other folders)
