[package]
name = "connection-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
axum-extra = "0.9"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
prost = "0.13"
proto-gen = { path = "../proto-gen" }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
